[package]
name = "music-virtual-machine"
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
version = "0.1.0"
description = "Music virtual machine which can program music and play your music"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/haruki7049/hrtor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
clap_complete = "4.5.50"
directories = "6.0.0"
hound = "3.5.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
